﻿<h3>Version 1.1.3</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>New EmployeeDirectory module provides search for employees.</li>
    <li>ViewEmployeeDetails: fixes for non-popup mode.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.2</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>Ability to lookup for photo by employee name (also supports transliteration for cyrillic (russian) names).</li>
	<li>Implemented #39: Position entity: Added IsTeacher field and corresponding UI.</li>
	<li>Implemented #45: Employee entity: Added Disciplines field and corresponding UI.</li>
    <li>Implemented #47: Employee entity: Default employee photo images.</li>
    <li>Partially implemented #46: Launchpad: Search / filter functionality by employees.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.1</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
	<li>EmployeeList module: Better employee sorting by adding some weight to the prime positions in the current division (applies to sorting by max. weight only).</li>
	<li>Employee module: Shows edit / details actions only when employee exists, not just defined in module settings.</li>
	<li>Employee entity: OtherName now optional.</li>
	<li>EditEmployee control: Employee name fields now properly validated.</li>
	<li>EditEmployee control: Cancel buttons in position and achievement edit forms always visible now.</li>
	<li>Implemented #10: Employee, Division entities: Added WebSiteLabel field to make website links more readable.</li>
	<li>Implemented #36: Employee module: Ability to display employee info by userid querystring param on the profile page.</li>
	<li>Implemented #38: Division entity: Added DocumentURL field for the division's main (regulations) document.</li>