@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.01.03">
+		<package name="R7.University" type="Library" version="01.01.04">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -52,11 +52,15 @@
 						</script>
 						<script type="Install">
 							<name>SqlDataProvider\01.01.03.SqlDataProvider</name>
-							<version>01.01.03</version>
+							<version>01.01.04</version>
+						</script>
+						<script type="Install">
+							<name>SqlDataProvider\01.01.04.SqlDataProvider</name>
+							<version>01.01.04</version>
 						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.01.03</version>
+							<version>01.01.04</version>
 						</script>
 					</scripts>
 				</component>
@@ -79,7 +83,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.01.03">
+		<package name="R7.University.Launchpad" type="Module" version="01.01.04">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
@@ -200,7 +204,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.01.03">
+		<package name="R7.University.Employee" type="Module" version="01.01.04">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -304,7 +308,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.01.03">
+		<package name="R7.University.EmployeeList" type="Module" version="01.01.04">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -397,7 +401,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.01.03">
+		<package name="R7.University.Division" type="Module" version="01.01.04">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -490,7 +494,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.03">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.04">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
